# WindsynthRecorder

./: AUDIO_ARCHITECTURE_EVOLUTION.md  CMakeLists.txt  JUCE_XCODE_INTEGRATION_GUIDE.md  README.md  VST_IMPLEMENTATION_GUIDE.md  VST_PLUGIN_FEATURE_SPECIFICATION.md  test_runner_main.cpp  完全重写计划：6 个阶段重构.md
.kiro/steering/: product.md  structure.md  tech.md
Libraries/Bridge/: AudioGraphBridge.cpp  AudioGraphBridge.h  VSTBridge.h  VSTBridge.mm
Libraries/JUCESupport/: AudioGraphBridge.h  AudioGraphBridge.mm  WindsynthEngineFacade.cpp  WindsynthEngineFacade.hpp
Libraries/JUCESupport/AudioGraph/Core/: AudioGraphTypes.hpp  GraphAudioProcessor.cpp  GraphAudioProcessor.hpp
Libraries/JUCESupport/AudioGraph/Management/: AudioIOManager.cpp  AudioIOManager.hpp  GraphManager.cpp  PresetManager.cpp  PresetManager.hpp
Libraries/JUCESupport/AudioGraph/Plugins/: ModernPluginLoader.cpp  ModernPluginLoader.hpp  PluginManager.cpp  PluginManager.hpp
Libraries/JUCESupport/AudioGraph/Tests/: AudioGraphTests.cpp  AudioGraphTests.hpp  TestRunner.cpp
Libraries/JUCESupport/Engine/: REFACTORING_SUMMARY.md  RefactoredWindsynthEngineFacade.cpp  RefactoredWindsynthEngineFacade.hpp  RefactoringDemo.cpp  WindsynthEngineFacade.cpp  WindsynthEngineFacade.hpp
Libraries/JUCESupport/Engine/Bridge/: AudioFileBridge.h  AudioFileBridge.mm  Bridge.h  BridgeInternal.h  EngineBridge.h  EngineBridge.mm  ParameterBridge.h  ParameterBridge.mm  PluginBridge.h  PluginBridge.mm  RefactoredBridge.h  RefactoredBridge.mm  RefactoredEngineBridge.h
Libraries/JUCESupport/Engine/Core/: EngineContext.cpp  EngineContext.hpp  EngineObserver.cpp  EngineObserver.hpp
Libraries/JUCESupport/Engine/Interfaces/: IAudioFileManager.hpp  IEngineLifecycleManager.hpp  INodeParameterController.hpp  IPluginManager.hpp
Libraries/JUCESupport/Engine/Managers/: AudioFileManager.cpp  AudioFileManager.hpp  EngineLifecycleManager.cpp  EngineLifecycleManager.hpp  NodeParameterController.cpp  NodeParameterController.hpp
Libraries/VSTSupport/: AppConfig.h  AudioProcessingChain.cpp  AudioProcessingChain.hpp  JuceHeader.h  JuceIncludes.h  OfflineProcessor.cpp  OfflineProcessor.hpp  RealtimeProcessor.cpp  RealtimeProcessor.hpp  VSTPluginManager.cpp  VSTPluginManager.hpp
Libraries/VSTSupport/AudioGraph/Core/: AudioGraphTypes.hpp  GraphAudioProcessor.cpp
Libraries/VSTSupport/AudioGraph/Management/: AudioIOManager.cpp  AudioIOManager.hpp  GraphManager.hpp  PresetManager.cpp  PresetManager.hpp
Libraries/VSTSupport/AudioGraph/Plugins/: ModernPluginLoader.cpp  ModernPluginLoader.hpp  PluginManager.cpp  PluginManager.hpp
Tests/: IzotopePluginTest.cpp  VSTLibraryMain.cpp  VSTServer.cpp  VSTTest.cpp
WindsynthRecorder/: Info.plist  WindsynthRecorder-Bridging-Header-Simple.h  WindsynthRecorder-Bridging-Header.h  WindsynthRecorderApp.swift
WindsynthRecorder.xcodeproj/: project.pbxproj
WindsynthRecorder/Assets.xcassets/AppIcon.appiconset/: Contents.json
WindsynthRecorder/Bridge/: AudioGraphBridge-Bridging-Header.h  AudioGraphBridge.h
WindsynthRecorder/Documentation/: MultiWindowManagement.md
WindsynthRecorder/Managers/: AppDelegate.swift  WindowManager.swift
WindsynthRecorder/Preview Content/Preview Assets.xcassets/AudioMixView.imageset/: Contents.json
WindsynthRecorder/Preview Content/Preview Assets.xcassets/BatchProcessor.imageset/: Contents.json
WindsynthRecorder/Preview Content/Preview Assets.xcassets/HomePage.imageset/: Contents.json
WindsynthRecorder/Preview Content/Preview Assets.xcassets/Logger.imageset/: Contents.json
WindsynthRecorder/Preview Content/Preview Assets.xcassets/Startup.imageset/: Contents.json
WindsynthRecorder/Preview Content/Preview Assets.xcassets/VSTManager.imageset/: Contents.json
WindsynthRecorder/Services/: AudioAnalyzer.swift  AudioChainManager.swift  AudioDeviceManager.swift  AudioExportService.swift  AudioGraphService.swift  AudioMixerService.swift  AudioProcessingLogger.swift  AudioProcessor.swift  AudioRecorder.swift  BatchFileManager.swift  FFmpegManager.swift  FileDropHandler.swift  JUCEAudioEngine.swift  NotificationManager.swift  RealtimeAudioManager.swift  VSTManagerExample.swift  VSTPluginService.swift
WindsynthRecorder/Views/: AboutView.swift  AudioMixerView.swift  AudioProcessorView.swift  ContentView.swift  LoudnessSettingsView.swift  LoudnormSettingsView.swift  PluginParameterView.swift  PluginStatisticsView.swift  StartupInitializationView.swift  VSTProcessorView.swift
WindsynthRecorder/Views/Components/: AudioExportOptionsView.swift  AudioExportProgressView.swift  MixerChannelStrip.swift  NativeWaveformView.swift  OfflineRenderDialog.swift  ProfessionalControls.swift  ProfessionalMeters.swift  VSTPluginSlot.swift
WindsynthRecorder/Views/Windows/: AudioMixerWindowView.swift  AudioProcessorWindowView.swift  LogsWindowView.swift  SettingsWindowView.swift  VSTManagerWindowView.swift
